--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head>
+<meta name="description" content="Emili Tortosa-Ausina - Research interests in efficiency, productivity, banking, and econometrics">
+<meta name="keywords" content="economics, banking, efficiency, productivity, research, academic">
+<meta name="author" content="Emili Tortosa-Ausina">
+<meta name="robots" content="index, follow">
+	
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
 
@@ -1370,4 +1375,5 @@ Pastor           and L.   Serrano,       Bilbao:     <a href="http://www.fbbva.e
  <br>
 
 </body></html>
+
 
