--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head>
-<meta name="description" content="Emili Tortosa-Ausina - Research interests in efficiency, productivity, banking, and econometrics">
-<meta name="keywords" content="economics, banking, efficiency, productivity, research, academic">
-<meta name="author" content="Emili Tortosa-Ausina">
-<meta name="robots" content="index, follow">
-	
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
 
   <title>Emili Tortosa-Ausina, vita</title>
@@ -111,6 +106,17 @@ with Jesús Peiró-Palomino and Anabel Forte,
 
 
 -->
+
+
+<li> "Vertical transfers, political alignment, and efficiency in local government," (2025), with Isabel Narbón-Perpiñá, Maria Teresa Balaguer-Coll and Diego Prior
+<a href="https://onlinelibrary.wiley.com/journal/14676435">
+Kyklos</a>, forthcoming.<br>
+
+</li>
+
+                                                        <br>
+
+
 
 
 
@@ -1334,7 +1340,7 @@ Pastor           and L.   Serrano,       Bilbao:     <a href="http://www.fbbva.e
 
 
 
-<p><i><font size="-1">Last modified: March 29th, 2025</font></i>
+<p><i><font size="-1">Last modified: October 1st, 2025</font></i>
            </p>
 
                                                                       </div>
@@ -1375,5 +1381,3 @@ Pastor           and L.   Serrano,       Bilbao:     <a href="http://www.fbbva.e
  <br>
 
 </body></html>
-
-
