--- a/index.html
+++ b/index.html
@@ -117,24 +117,6 @@ Kyklos</a>, forthcoming.<br>
                                                         <br>
 
 
-
-
-
-<li> "On the relative contributions of national and regional institutions to economic development," (2025), with Daniel Aparicio-Pérez, Maria Teresa Balaguer-Coll and Jesús Peiró-Palomino
-<a href="https://onlinelibrary.wiley.com/journal/14679787">
-Journal of Regional Science</a>, forthcoming.<br>
-
-</li>
-
-                                                        <br>
-
-
-
-
-
-
-
-
 <li> "Politics versus Economics: The Case of Spanish Regional Financing," (2025), with Daniel Aparicio, Maria Teresa Balaguer-Coll and Arne Risa Hole,
 <a href="https://journals.sagepub.com/home/PSX">
 Political Studies</a>, forthcoming.<br>
@@ -145,11 +127,29 @@ Political Studies</a>, forthcoming.<br>
 
 
 
+<li> "On the relative contributions of national and regional institutions to economic development," (2025), with Daniel Aparicio-Pérez, Maria Teresa Balaguer-Coll and Jesús Peiró-Palomino
+<a href="https://onlinelibrary.wiley.com/journal/14679787">
+Journal of Regional Science</a>, 65, 1118-1136.<br>
+
+</li>
+
+                                                        <br>
+
+
+
+
+
+
+
+
+
+
+
 
 
 <li> "Urban-rural links in relaunching left-behind places: The case of Portuguese municipalities," (2025), with Luisa Alamá, Miguel Á. Márquez and Júlia Cravo,
 <a href="https://academic.oup.com/joeg">
-Journal of Economic Geography</a>, forthcoming.<br>
+Journal of Economic Geography</a>, 25(3), 371-405.<br>
 
 </li>
 
@@ -160,7 +160,7 @@ Journal of Economic Geography</a>, forthcoming.<br>
 
 <li> "Evaluating the spatial mismatch between population and factor endowments: The case of the European Union," (2025), with Luisa Alamá, Yolanda de Llanos and Miguel Á. Márquez,
 <a href="https://www.tandfonline.com/journals/cres20">
-Regional Studies</a>, forthcoming.<br>
+Regional Studies</a>, 59(1), 2387811.<br>
 
 </li>
 
