--- a/index.html
+++ b/index.html
@@ -108,6 +108,16 @@ with Jesús Peiró-Palomino and Anabel Forte,
 -->
 
 
+<li> "On the evolution over time of Financial Inclusion: A new multivariate index for Mexican municipalities," (2025), with María del Carmen Dircio, Paula Cruz-García and Fausto Trillo
+<a href="https://link.springer.com/journal/11205">
+Social Indicators Research</a>, forthcoming.<br>
+
+</li>
+
+                                                        <br>
+
+	
+
 <li> "Vertical transfers, political alignment, and efficiency in local government," (2025), with Isabel Narbón-Perpiñá, Maria Teresa Balaguer-Coll and Diego Prior
 <a href="https://onlinelibrary.wiley.com/journal/14676435">
 Kyklos</a>, forthcoming.<br>
@@ -1381,3 +1391,4 @@ Pastor           and L.   Serrano,       Bilbao:     <a href="http://www.fbbva.e
  <br>
 
 </body></html>
+
