--- a/index.html
+++ b/index.html
@@ -108,7 +108,18 @@ with Jesús Peiró-Palomino and Anabel Forte,
 -->
 
 
-<li> "On the evolution over time of Financial Inclusion: A new multivariate index for Mexican municipalities," (2025), with María del Carmen Dircio, Paula Cruz-García and Fausto Trillo
+<li> "Assessing the Impact of Environmental Factors on Emergency Healthcare Quality: A Benchmarking Approach," (2026), with Marc Aliana-Cervera and Diego Prior
+<a href="https://www.sciencedirect.com/journal/operations-research-perspectives">
+Operations Research Perspectives</a>, forthcoming.<br>
+
+</li>
+
+                                                        <br>
+
+
+	
+
+<li> "On the evolution over time of Financial Inclusion: A new multivariate index for Mexican municipalities," (2026), with María del Carmen Dircio, Paula Cruz-García and Fausto Trillo
 <a href="https://link.springer.com/journal/11205">
 Social Indicators Research</a>, forthcoming.<br>
 
@@ -118,16 +129,8 @@ Social Indicators Research</a>, forthcoming.<br>
 
 	
 
-<li> "Vertical transfers, political alignment, and efficiency in local government," (2025), with Isabel Narbón-Perpiñá, Maria Teresa Balaguer-Coll and Diego Prior
-<a href="https://onlinelibrary.wiley.com/journal/14676435">
-Kyklos</a>, forthcoming.<br>
 
-</li>
-
-                                                        <br>
-
-
-<li> "Politics versus Economics: The Case of Spanish Regional Financing," (2025), with Daniel Aparicio, Maria Teresa Balaguer-Coll and Arne Risa Hole,
+<li> "Politics versus Economics: The Case of Spanish Regional Financing," (2026), with Daniel Aparicio, Maria Teresa Balaguer-Coll and Arne Risa Hole,
 <a href="https://journals.sagepub.com/home/PSX">
 Political Studies</a>, forthcoming.<br>
 
@@ -135,6 +138,14 @@ Political Studies</a>, forthcoming.<br>
 
                                                         <br>
 
+
+<li> "Vertical transfers, political alignment, and efficiency in local government," (2026), with Isabel Narbón-Perpiñá, Maria Teresa Balaguer-Coll and Diego Prior
+<a href="https://onlinelibrary.wiley.com/journal/14676435">
+Kyklos</a>, 79, 183-200.<br>
+
+</li>
+
+                                                        <br>
 
 
 <li> "On the relative contributions of national and regional institutions to economic development," (2025), with Daniel Aparicio-Pérez, Maria Teresa Balaguer-Coll and Jesús Peiró-Palomino
@@ -1391,5 +1402,6 @@ Pastor           and L.   Serrano,       Bilbao:     <a href="http://www.fbbva.e
  <br>
 
 </body></html>
+
 
 
