--- a/index.html
+++ b/index.html
@@ -108,6 +108,17 @@ with Jesús Peiró-Palomino and Anabel Forte,
 -->
 
 
+
+<li> "Bank Ownership, Governance Changes, and Small Business Lending in Indonesia: A Two-Stage Estimation Approach (2009--2019)," (2026), with Ririen Setiati Riyanti, Iván Arribas and Silvia Pazzi
+<a href="https://www.sciencedirect.com/journal/emerging-markets-review">
+Emerging Markets Review</a>, forthcoming.<br>
+
+</li>
+
+                                                        <br>
+
+	
+
 <li> "Assessing the Impact of Environmental Factors on Emergency Healthcare Quality: A Benchmarking Approach," (2026), with Marc Aliana-Cervera and Diego Prior
 <a href="https://www.sciencedirect.com/journal/operations-research-perspectives">
 Operations Research Perspectives</a>, forthcoming.<br>
@@ -1402,6 +1413,7 @@ Pastor           and L.   Serrano,       Bilbao:     <a href="http://www.fbbva.e
  <br>
 
 </body></html>
+
 
 
 
