--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ with Jesús Peiró-Palomino and Anabel Forte,
 
 
 
-<li> "Bank Ownership, Governance Changes, and Small Business Lending in Indonesia: A Two-Stage Estimation Approach (2009--2019)," (2026), with Ririen Setiati Riyanti, Iván Arribas and Silvia Pazzi
+<li> "Bank Ownership, Governance Changes, and Small Business Lending in Indonesia: A Two-Stage Estimation Approach (2009--2019)," (2026), with Ririen Setiati Riyanti, Iván Arribas and Silvia Pazzi,
 <a href="https://www.sciencedirect.com/journal/emerging-markets-review">
 Emerging Markets Review</a>, forthcoming.<br>
 
@@ -119,7 +119,7 @@ Emerging Markets Review</a>, forthcoming.<br>
 
 	
 
-<li> "Assessing the Impact of Environmental Factors on Emergency Healthcare Quality: A Benchmarking Approach," (2026), with Marc Aliana-Cervera and Diego Prior
+<li> "Assessing the Impact of Environmental Factors on Emergency Healthcare Quality: A Benchmarking Approach," (2026), with Marc Aliana-Cervera and Diego Prior,
 <a href="https://www.sciencedirect.com/journal/operations-research-perspectives">
 Operations Research Perspectives</a>, forthcoming.<br>
 
@@ -130,7 +130,7 @@ Operations Research Perspectives</a>, forthcoming.<br>
 
 	
 
-<li> "On the evolution over time of Financial Inclusion: A new multivariate index for Mexican municipalities," (2026), with María del Carmen Dircio, Paula Cruz-García and Fausto Trillo
+<li> "On the evolution over time of Financial Inclusion: A new multivariate index for Mexican municipalities," (2026), with María del Carmen Dircio, Paula Cruz-García and Fausto Trillo,
 <a href="https://link.springer.com/journal/11205">
 Social Indicators Research</a>, forthcoming.<br>
 
@@ -1413,6 +1413,7 @@ Pastor           and L.   Serrano,       Bilbao:     <a href="http://www.fbbva.e
  <br>
 
 </body></html>
+
 
 
 
