--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@ with Jesús Peiró-Palomino and Anabel Forte,
 
 
 
-<li> "Bank Ownership, Governance Changes, and Small Business Lending in Indonesia: A Two-Stage Estimation Approach (2009--2019)," (2026), with Ririen Setiati Riyanti, Iván Arribas and Silvia Pazzi,
+<li> "Bank Ownership, Governance Changes, and Small Business Lending in Indonesia: A Two-Stage Estimation Approach," (2026), with Ririen Setiati Riyanti, Iván Arribas and Silvia Pazzi,
 <a href="https://www.sciencedirect.com/journal/emerging-markets-review">
-Emerging Markets Review</a>, forthcoming.<br>
+Emerging Markets Review</a>,  72, 101452.<br>
 
 </li>
 
@@ -121,7 +121,7 @@ Emerging Markets Review</a>, forthcoming.<br>
 
 <li> "Assessing the Impact of Environmental Factors on Emergency Healthcare Quality: A Benchmarking Approach," (2026), with Marc Aliana-Cervera and Diego Prior,
 <a href="https://www.sciencedirect.com/journal/operations-research-perspectives">
-Operations Research Perspectives</a>, forthcoming.<br>
+Operations Research Perspectives</a>, 16, 100377.<br>
 
 </li>
 
@@ -132,7 +132,7 @@ Operations Research Perspectives</a>, forthcoming.<br>
 
 <li> "On the evolution over time of Financial Inclusion: A new multivariate index for Mexican municipalities," (2026), with María del Carmen Dircio, Paula Cruz-García and Fausto Trillo,
 <a href="https://link.springer.com/journal/11205">
-Social Indicators Research</a>, forthcoming.<br>
+Social Indicators Research</a>, 181(3), 69.<br>
 
 </li>
 
@@ -143,7 +143,7 @@ Social Indicators Research</a>, forthcoming.<br>
 
 <li> "Politics versus Economics: The Case of Spanish Regional Financing," (2026), with Daniel Aparicio, Maria Teresa Balaguer-Coll and Arne Risa Hole,
 <a href="https://journals.sagepub.com/home/PSX">
-Political Studies</a>, forthcoming.<br>
+Political Studies</a>,  74(1), 114–143.<br>
 
 </li>
 
@@ -1413,6 +1413,7 @@ Pastor           and L.   Serrano,       Bilbao:     <a href="http://www.fbbva.e
  <br>
 
 </body></html>
+
 
 
 
